Change input type subscription

--- a/app/views/layouts/shared/_account_footer.html.haml
+++ b/app/views/layouts/shared/_account_footer.html.haml
@@ -7,7 +7,7 @@
           %form.form-inline
             .form-group
               %input.form-control{placeholder: t("account.footer.placeholder"),
-                type: "subscription"}
+                type: "text"}
             %button.btn.btn-default{type: "submit"}
               = t "account.footer.button"
       .col-md-5
