--- a/app/views/answers/fields/_answer_date.html.haml
+++ b/app/views/answers/fields/_answer_date.html.haml
@@ -1,3 +1,3 @@
 = f.simple_fields_for :answer_date do |builder|
-  = builder.input :response, label: false, start_year: Date.today.year - 80,
-    end_year: Date.today.year
+  = builder.input :response, label: false, as: :string,
+    input_html: { "data-behavior": "date-picker" }, placeholder: t("app.answer.date")
