--- a/app/views/questions/_question.html.haml
+++ b/app/views/questions/_question.html.haml
@@ -33,7 +33,7 @@
           0
       = t "app.survey.show.average_rating"
   - if ["open", "date", "description", "phone", "email"].include? question.question_type
-    - if question.answers.any?
+    - if current_page?(action: :show) && question.answers.any?
       %li.list-group-item
         .clearfix
           = link_to t("app.survey.show.answer_show"), [question, :answers],
