Add breadcrumbs gem

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -275,6 +275,11 @@ small.handle {
   margin-right: 5px;
 }
 
+.nav .breadcrumb {
+  float: left;
+  margin: 15px 10px !important;
+}
+
 /* MARGINS */
 
 .m-t-0 {
