--- a/app/views/surveys/show.html.haml
+++ b/app/views/surveys/show.html.haml
@@ -96,7 +96,8 @@
               = t "app.survey.show.results_by_type"
               - @trans_keys = @survey.questions.unscope(:order).group_types.transform_keys do |key|
                 - t("app.question.question_types.#{key}").capitalize
-              = pie_chart @trans_keys
+              = pie_chart @trans_keys, library: { pieSliceText: "value-and-percentage",
+                legend: "none" }
 
         = render @survey.questions
 
