--- a/app/views/layouts/account.html.haml
+++ b/app/views/layouts/account.html.haml
@@ -5,6 +5,7 @@
       "http-equiv": "Content-Type"}
     %meta{name: "viewport",
       content: "width=device-width, initial-scale=1"}
+    %meta{content: "no-cache", name: "turbolinks-cache-control"}
     %title
       - if content_for?(:title)
         = yield(:title)
