--- a/app/assets/stylesheets/surveys.scss
+++ b/app/assets/stylesheets/surveys.scss
@@ -1,3 +1,21 @@
 // Place all the styles related to the surveys controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.survey-form-upload {
+  margin-top: 15px;
+  .dropzone {
+    border: 1px dashed rgba(0, 0, 0, 0.3);
+  }
+}
+
+.survey-images {
+  margin-top: 20px;
+  .caption {
+    position:absolute;
+    padding:2%;
+    text-align:center;
+    color:#fff !important;
+    z-index:2;
+  }
+}
