--- a/app/views/surveys/search.html.haml
+++ b/app/views/surveys/search.html.haml
@@ -1,6 +1,6 @@
 - content_for :sub_nav do
   .col-md-5
-    %h1 Survey search results
+    %h1= t("app.survey.search.subnav")
   .col-md-3
     %ul.list-inline
       %li
