--- a/app/views/surveys/_question_fields.html.haml
+++ b/app/views/surveys/_question_fields.html.haml
@@ -7,8 +7,8 @@
   = f.input :title, label: false, placeholder: Question.human_attribute_name(:title)
   = f.input :question_type, label: false,
     input_html: { data: { behavior: "question_type" } },
-    collection: t("app.question.question_types").invert,
-    prompt: Question.human_attribute_name(:question_type)
+    collection: t("app.question.question_types").invert, as: :radio_buttons,
+    item_wrapper_tag: false, boolean_style: :inline
   = f.hidden_field :position, class: "question-position",
     value: (f.options[:child_index] + 1).abs
 
@@ -40,3 +40,4 @@
   /.form-group
   /= link_to_add_fields fa_icon("plus", text: "Add some options"), f,
   /:options, "btn btn-primary btn-xs #{show_option_button(f.object.question_type_id)}"
+  %hr
