Add image gallery to image questions and filters to answers

--- a/app/assets/stylesheets/answers.scss
+++ b/app/assets/stylesheets/answers.scss
@@ -52,3 +52,11 @@
     }
   }
 }
+
+.answer-search {
+  margin-bottom: 15px;
+  text-align: center;
+  .form-group {
+    margin-right: 10px;
+  }
+}
