--- a/app/views/customers/_own.html.haml
+++ b/app/views/customers/_own.html.haml
@@ -7,7 +7,7 @@
           = truncate(customer.description, length: 80)
 - end.empty?
   %li
-    %p= t("app.no_results")
+    %p.text-center= t("app.no_results")
 %li.divider
   %li
     = link_to t("app.customer.index.links.view"), customers_path, class: "text-center"
