--- a/app/views/answers/index.csv.haml
+++ b/app/views/answers/index.csv.haml
@@ -1,8 +1,8 @@
-- headers = ['Answered on', 'User', 'Answer response']
+- headers = ['ID', 'Answered on', 'User', 'Answer response']
 = CSV.generate_line headers, :row_sep => ?\t, :quote_char => ?\
 - @answers.each do |answer|
 
   - answers = answer.answer_date.response.strftime("%m/%d/%Y") if answer.answer_date.present?
   - answers = answer.answer_open.response if answer.answer_open.present?
-  = CSV.generate_line [answer.created_at.strftime("%m/%d/%Y at %I:%M%p"),
+  = CSV.generate_line [answer.id, answer.created_at.strftime("%m/%d/%Y at %I:%M%p"),
     answer.submission.user.email, answers], :row_sep => ?\t, :quote_char => ?\
