--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -227,6 +227,15 @@ small.handle {
   }
 }
 
+.panel-search {
+  background: #fff;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  padding: 15px;
+  margin: 0px 0px 20px 0px;
+  text-align: center;
+  border-radius: 30px;
+}
+
 .user-panel {
   background-color: #FFF;
   padding: 15px;
