Remove question type chart from report

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -112,6 +112,13 @@ small.handle {
   cursor: move;
 }
 
+.separator {
+  margin-top: 25px;
+  margin-bottom: 25px;
+  border: 0;
+  border-top: 3px solid #6d26ff;
+}
+
 .image-fields {
   margin-bottom: 15px;
   .media-body {
